--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
                 /* cursor: none; */
             }
 .searchArea > form > input::after {
-    background-image: url(../image/icons8-search-50.png);
+    background-image: url(../images/icons8-search-50.png);
 }
             .searchArea > form > img {
                 width: 20px;
@@ -240,7 +240,7 @@ padding: 10px 0px;
             }
             .airplane1 {
                 width: 100%;
-                background-image: url(../image/obi-onyeador-gUW8waI74AQ-unsplash.jpg);
+                background-image: url(../images/obi-onyeador-gUW8waI74AQ-unsplash.jpg);
                 height: 1100px;
                 position: relative;
                 background-position: center center no-repeat;
@@ -982,7 +982,7 @@ cursor: pointer;
             .weekly_best_container {
                 width: 300px;
                 height: 300px;
-                background: url(../image/square-lab-T_6yJJQ_-wA-unsplash.jpg) no-repeat;
+                background: url(../images/square-lab-T_6yJJQ_-wA-unsplash.jpg) no-repeat;
             }
             .weekly_best_container:hover .img_bg_black{
                 opacity: 0.7;
